# Shopper_Spectrum

./: .gitignore  README.md  project_analysis_and_fixes.md  pyproject.toml  train.py
notebooks/: shopper_spectrum.ipynb
src/: clustering.py  preprocessing.py  recommendation.py  rfm_analysis.py  utils.py
streamlit_app/: app.py
