[project]
name = "shopper-spectrum"
version = "0.1.0"
description = "Customer Segmentation and Product Recommendation System using RFM Analysis, KMeans Clustering and Collaborative Filtering"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2.2",
    "numpy>=2.0.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.1",
    "streamlit>=1.46.0",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
